@@ -316,6 +316,24 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|util
+operator|.
+name|ClientUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|common
 operator|.
 name|params
@@ -1380,7 +1398,10 @@ name|batch
 init|=
 operator|new
 name|ArrayList
-argument_list|()
+argument_list|<>
+argument_list|(
+name|batchSize
+argument_list|)
 decl_stmt|;
 for|for
 control|(
@@ -1444,65 +1465,43 @@ name|buf
 init|=
 operator|new
 name|StringBuilder
+argument_list|(
+name|batch
+operator|.
+name|size
 argument_list|()
+operator|*
+literal|10
+operator|+
+literal|20
+argument_list|)
 decl_stmt|;
 name|buf
+operator|.
+name|append
+argument_list|(
+literal|"{! df="
+argument_list|)
 operator|.
 name|append
 argument_list|(
 name|rightKey
 argument_list|)
-expr_stmt|;
-name|buf
 operator|.
 name|append
 argument_list|(
-literal|":("
+literal|" q.op=OR cache=false }"
 argument_list|)
 expr_stmt|;
+comment|//disable queryCache
 for|for
 control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|batch
-operator|.
-name|size
-argument_list|()
-condition|;
-name|i
-operator|++
-control|)
-block|{
-if|if
-condition|(
-name|i
-operator|>
-literal|0
-condition|)
-block|{
-name|buf
-operator|.
-name|append
-argument_list|(
-literal|" "
-argument_list|)
-expr_stmt|;
-block|}
 name|Tuple
 name|tuple
-init|=
+range|:
 name|batch
-operator|.
-name|get
-argument_list|(
-name|i
-argument_list|)
-decl_stmt|;
+control|)
+block|{
 name|String
 name|key
 init|=
@@ -1517,17 +1516,20 @@ name|buf
 operator|.
 name|append
 argument_list|(
-name|key
+literal|' '
 argument_list|)
-expr_stmt|;
-block|}
-name|buf
 operator|.
 name|append
 argument_list|(
-literal|")"
+name|ClientUtils
+operator|.
+name|escapeQueryChars
+argument_list|(
+name|key
+argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
 name|ModifiableSolrParams
 name|params
 init|=
@@ -1629,6 +1631,7 @@ name|fetched
 init|=
 operator|new
 name|HashMap
+argument_list|<>
 argument_list|()
 decl_stmt|;
 try|try
