@@ -8044,6 +8044,7 @@ operator|new
 name|SolrClientCache
 argument_list|()
 decl_stmt|;
+comment|//TODO share in @Before ; close in @After ?
 operator|new
 name|UpdateRequest
 argument_list|()
@@ -8914,6 +8915,122 @@ expr_stmt|;
 name|assertTrue
 argument_list|(
 literal|"blah blah blah 9"
+operator|.
+name|equals
+argument_list|(
+name|t
+operator|.
+name|getString
+argument_list|(
+literal|"subject"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// SOLR-10404 test that "hello 99" as a value gets escaped
+operator|new
+name|UpdateRequest
+argument_list|()
+operator|.
+name|add
+argument_list|(
+name|id
+argument_list|,
+literal|"99"
+argument_list|,
+literal|"a1_s"
+argument_list|,
+literal|"hello 99"
+argument_list|,
+literal|"a2_s"
+argument_list|,
+literal|"hello 99"
+argument_list|,
+literal|"subject"
+argument_list|,
+literal|"blah blah blah 99"
+argument_list|)
+operator|.
+name|commit
+argument_list|(
+name|cluster
+operator|.
+name|getSolrClient
+argument_list|()
+argument_list|,
+name|COLLECTIONORALIAS
+argument_list|)
+expr_stmt|;
+name|stream
+operator|=
+name|factory
+operator|.
+name|constructStream
+argument_list|(
+literal|"fetch("
+operator|+
+name|COLLECTIONORALIAS
+operator|+
+literal|",  search("
+operator|+
+name|COLLECTIONORALIAS
+operator|+
+literal|", q="
+operator|+
+name|id
+operator|+
+literal|":99, fl=\"id,a1_s\", sort=\"id asc\"), on=\"a1_s=a2_s\", fl=\"subject\")"
+argument_list|)
+expr_stmt|;
+name|context
+operator|=
+operator|new
+name|StreamContext
+argument_list|()
+expr_stmt|;
+name|context
+operator|.
+name|setSolrClientCache
+argument_list|(
+name|solrClientCache
+argument_list|)
+expr_stmt|;
+name|stream
+operator|.
+name|setStreamContext
+argument_list|(
+name|context
+argument_list|)
+expr_stmt|;
+name|tuples
+operator|=
+name|getTuples
+argument_list|(
+name|stream
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|tuples
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|t
+operator|=
+name|tuples
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"blah blah blah 99"
 operator|.
 name|equals
 argument_list|(
